--- a/starter/output/team.html
+++ b/starter/output/team.html
@@ -32,9 +32,9 @@
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: a</li>
-                <li class="list-group-item">Email: <a href="mailto:gmail">gmail</a></li>
-                <li class="list-group-item">Office number: 44444444</li>
+                <li class="list-group-item">ID: SAM WITWICKY</li>
+                <li class="list-group-item">Email: <a href="mailto:YAHOO">YAHOO</a></li>
+                <li class="list-group-item">Office number: 01020304</li>
             </ul>
         </div>
     </div>
@@ -46,9 +46,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: B</li>
-            <li class="list-group-item">Email: <a href="mailto:HOTMAIL">HOTMAIL</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/GITTY" target="_blank" rel="noopener noreferrer">GITTY</a></li>
+            <li class="list-group-item">ID: BUMBLEBEE</li>
+            <li class="list-group-item">Email: <a href="mailto:AOL">AOL</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/BUMBLE" target="_blank" rel="noopener noreferrer">BUMBLE</a></li>
         </ul>
     </div>
 </div>
@@ -56,27 +56,13 @@
         <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">3</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: C</li>
-            <li class="list-group-item">Email: <a href="mailto:YAHOOOO">YAHOOOO</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/YAHOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO" target="_blank" rel="noopener noreferrer">YAHOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO</a></li>
-        </ul>
-    </div>
-</div>
-        
-        <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">4</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: SAL</li>
-            <li class="list-group-item">Email: <a href="mailto:SAL">SAL</a></li>
-            <li class="list-group-item">School: UCLA</li>
+            <li class="list-group-item">ID: JETFIRE</li>
+            <li class="list-group-item">Email: <a href="mailto:GMAIL">GMAIL</a></li>
+            <li class="list-group-item">School: DECEP</li>
         </ul>
     </div>
 </div>
